Archive2/55/c132c49d5b9a49/output
main.cpp:32:34: error: no member named 'foo' in 'std::integral_constant<bool, true>'
        eval_t<vargs<int, char, bool>>::foo();
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
1 error generated.
